fix: commit type name

--- a/commit_types.yml
+++ b/commit_types.yml
@@ -2,7 +2,7 @@
 - type:
     - feat
     - feature
-  section: Features
+  section: Featurettes
   release: minor
 - type: fix
   section: Bug Fixes
