fix: section name for feature changes

--- a/commit_types.yml
+++ b/commit_types.yml
@@ -2,7 +2,7 @@
 - type:
     - feat
     - feature
-  section: Featurettes
+  section: Features
   release: minor
 - type: fix
   section: Bug Fixes
