--- a/shareable_config.yml
+++ b/shareable_config.yml
@@ -1,4 +1,13 @@
 ---
+branches:
+  - +([0-9])?(.{+([0-9]),x}).x
+  - (main|master)
+  - next
+  - next-major
+  - name: beta
+    prerelease: true
+  - name: alpha
+    prerelease: true
 preset: conventionalcommits
 presetConfig:
   types:  # {{ note_generator_rules | dump }}
