ci(semrel): replace custom plugin list with  semantic-release-config-github-npm

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,9 +1,4 @@
 ---
-extends: "@gliech/semantic-release-config-base"
-plugins:
-  - "@semantic-release/commit-analyzer"
-  - "@semantic-release/release-notes-generator"
-  - "@semantic-release/changelog"
-  - "@semantic-release/git"
-  - "@semantic-release/github"
-  - "@semantic-release/npm"
+extends:
+  - "@gliech/semantic-release-config-base"
+  - "@gliech/semantic-release-config-github-npm"
