--- a/shareable_config.yml
+++ b/shareable_config.yml
@@ -10,9 +10,62 @@ branches:
     prerelease: true
 preset: conventionalcommits
 presetConfig:
-  types:  # {{ note_generator_rules | dump }}
-releaseRules:  # {{ release_rules | dump }}
-writerOpts:  # {{ templates | dump }}
+  types: []
+releaseRules: []
+writerOpts:
+  footerPartial: |
+    {{#if noteGroups}}
+    {{#each noteGroups}}
+
+    ### {{title}}
+
+    {{#each notes}}
+    * {{#if commit.scope}}**{{commit.scope}}:** {{/if}}{{text}}
+    {{/each}}
+    {{/each}}
+
+    {{/if}}
+  headerPartial: |
+    {{#if isPatch~}}
+      ##
+    {{~else~}}
+      #
+    {{~/if}} {{#if @root.linkCompare~}}
+      [{{version}}](
+      {{~#if @root.repository~}}
+        {{~#if @root.host}}
+          {{~@root.host}}/
+        {{~/if}}
+        {{~#if @root.owner}}
+          {{~@root.owner}}/
+        {{~/if}}
+        {{~@root.repository}}
+      {{~else}}
+        {{~@root.repoUrl}}
+      {{~/if~}}
+      /compare/{{previousTag}}...{{currentTag}})
+    {{~else}}
+      {{~version}}
+    {{~/if~}}
+    {{~#if title}} "{{title}}"
+    {{~/if}}
+    {{~#if date}} ({{date}})
+    {{/if}}
+  mainTemplate: |
+    {{> header}}
+
+    {{#each commitGroups}}
+
+    {{#if title}}
+    ### {{title}}
+
+    {{/if}}
+    {{#each commits}}
+    {{> commit root=@root}}
+    {{/each}}
+
+    {{/each}}
+    {{> footer}}
 changelogFile: CHANGELOG.md
 message: |
   chore(release): ${nextRelease.version}
