--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   ],
   "keywords": [],
   "dependencies": {
-    "conventional-changelog-conventionalcommits": "4",
-    "js-yaml": "4"
+    "conventional-changelog-conventionalcommits": "4.x",
+    "js-yaml": "4.x"
   },
   "peerDependencies": {
-    "semantic-release": "17"
+    "semantic-release": ">=17.2.3 <19.0.0"
   },
   "devDependencies": {
-    "@gliech/semantic-release-config-github-npm": "1",
-    "@semantic-release/changelog": "5",
-    "@semantic-release/git": "9",
-    "semantic-release": "17"
+    "@gliech/semantic-release-config-github-npm": "1.x",
+    "@semantic-release/changelog": "5.x",
+    "@semantic-release/git": "9.x",
+    "semantic-release": "17.x"
   },
   "publishConfig": {
     "access": "public"
