--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,13 +5,13 @@ updates:
     directory: "/"
     versioning-strategy: widen
     schedule:
-      interval: daily
+      interval: monthly
     commit-message:
       prefix: deps
       prefix-development: chore(deps)
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: daily
+      interval: monthly
     commit-message:
       prefix: ci(deps)
