--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "js-yaml": "4.x"
   },
   "peerDependencies": {
-    "semantic-release": ">=17.2.3 <19.0.0"
+    "semantic-release": ">=17.2.3 <22.0.0"
   },
   "devDependencies": {
     "@gliech/semantic-release-config-github-npm": "1.x",
     "@semantic-release/changelog": "6.x",
     "@semantic-release/git": "10.x",
-    "semantic-release": "19.x"
+    "semantic-release": ">=17.2.3"
   },
   "publishConfig": {
     "access": "public"
