--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "keywords": [],
   "dependencies": {
     "conventional-changelog-conventionalcommits": "6.x",
+    "@semantic-release/changelog": "6.x",
+    "@semantic-release/git": "10.x",
     "semantic-release": "21.x",
     "js-yaml": "4.x"
   },
